syntax = "proto3";

/*
option go_package = "path;name";
path 表示生成的go文件的存放地址，会自动生成目录的。
name 表示生成的go文件所属的包名
*/
option go_package="./;helloworldFile";
package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}